# TAIL-Bootloader

./: .gitignore  CMakeLists.txt  Makefile  README.md  codepage737ref.txt  compile_commands.json  conanfile.txt
src/: boot.asm  data.txt  disk.asm  gdt.asm  handlers.c  insc.h  main.c  mbr.asm  memory_map.h  vga.c  vga.h
src/MBR/: mbr.asm
src/arch/: cpu.h
src/asm/: gdt.asm  insc.asm  mbr.asm
src/bios/: video_servises.h
src/cpu/: handlers.h  int.c  int.h  interrupts.h  pic.c  pic.h  segm.h
src/io/: vga.c  vga.h
src/scripts/: linker.ld  mem.ld  memory.ld
src/vga/: presets.h  vga.h
